--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -119,9 +119,9 @@
           </ul>
         </div>
       </li>
-      <li class="nav-item {% if 'page-' in segment %} active {% endif %}">
+      <li class="nav-item {% if 'customer-' in segment %} active {% endif %}">
         <span class="nav-link  collapsed  d-flex justify-content-between align-items-center" data-bs-toggle="collapse"
-          data-bs-target="#submenu-pages">
+          data-bs-target="#submenu-pages" aria-expanded="{% if 'customer-' in segment %} true {% endif %}">
           <span>
             <span class="sidebar-icon">
               <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -141,42 +141,17 @@
             </svg>
           </span>
         </span>
-        <div class="multi-level collapse {% if 'page-' in segment %} show {% endif %} " role="list" id="submenu-pages"
-          aria-expanded="false">
+        <div class="multi-level collapse {% if 'customer-' in segment %} show {% endif %} " role="list" id="submenu-pages"
+          aria-expanded="true">
           <ul class="flex-column nav">
-            <li class="nav-item">
-              <a class="nav-link" href="/page-sign-in.html">
-                <span class="sidebar-text">Sign In</span>
+            <li class="nav-item {% if 'customer-patients' in segment %} active {% endif %}">
+              <a class="nav-link" href="/customer-patients.html">
+                <span class="sidebar-text">Manage Patients</span>
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/page-sign-up.html">
-                <span class="sidebar-text">Sign Up</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/page-forgot-password.html">
-                <span class="sidebar-text">Forgot password</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/page-reset-password.html">
-                <span class="sidebar-text">Reset password</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/page-lock.html">
-                <span class="sidebar-text">Lock</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/page-404.html">
-                <span class="sidebar-text">404 Not Found</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/page-500.html">
-                <span class="sidebar-text">500 Not Found</span>
+            <li class="nav-item {% if 'customer-patientdetails' in segment %} active {% endif %}">
+              <a class="nav-link" href="/customer-patientdetails.html">
+                <span class="sidebar-text">Patient Details</span>
               </a>
             </li>
           </ul>
@@ -184,7 +159,7 @@
       </li>
       <li class="nav-item {% if 'staff-' in segment %} active {% endif %}">
         <span class="nav-link  collapsed  d-flex justify-content-between align-items-center" data-bs-toggle="collapse"
-          data-bs-target="#submenu-components">
+          data-bs-target="#submenu-components" aria-expanded="{% if 'staff-' in segment %} true {% endif %}">
           <span>
             <span class="sidebar-icon">
               <svg class="icon icon-xs me-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
