--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -87,12 +87,12 @@
                                 </a>
                             </div>-->
 
-                            <div class="d-flex justify-content-center align-items-center mt-4">
+                            <!-- <div class="d-flex justify-content-center align-items-center mt-4">
                                 <span class="fw-normal">
                                     Not registered?
                                     <a href="{{ url_for('authentication_blueprint.register') }}" class="fw-bold">Create account</a>
                                 </span>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
