--- a/apps/templates/home/page-sign-in.html
+++ b/apps/templates/home/page-sign-in.html
@@ -75,10 +75,10 @@
                                 </a>
                             </div>
                             <div class="d-flex justify-content-center align-items-center mt-4">
-                                <span class="fw-normal">
+                                <!-- <span class="fw-normal">
                                     Not registered?
                                     <a href="./sign-up.html" class="fw-bold">Create account</a>
-                                </span>
+                                </span> -->
                             </div>
                         </div>
                     </div>
